@@ -267,6 +267,7 @@ end
  		-- I can probably use this to fix the weird problem with PvP flag checking that seemed blizzard-sided
  		-- but I am lazy and that will come later.
 function GSA:CanTalkHere()
+	-- !!Triggered from PLAYER_ENTERING_WORLD!!
 	--Disable By Location
 	local _,currentZoneType = IsInInstance()
 	local _,_,_,_,_,_,_,instanceMapID = GetInstanceInfo()
@@ -291,7 +292,8 @@ end
  function GladiatorlosSA:COMBAT_LOG_EVENT_UNFILTERED(event , ...)
 	-- Checks if alerts should occur here.
 	if (not canSpeakHere) then return end
-	 local isSanctuary = GetZonePVPInfo()
+
+	 local isSanctuary = GetZonePVPInfo()	-- Because canSpeakHere is checked on PLAYER_ENTERING_WORLD.
 	 if (isSanctuary == "sanctuary") then return end
 	
 	local timestamp,event,hideCaster,sourceGUID,sourceName,sourceFlags,sourceFlags2,destGUID,destName,destFlags,destFlags2,spellID = CombatLogGetCurrentEventInfo()
@@ -364,7 +366,7 @@ end
 	elseif (event == "SPELL_CAST_SUCCESS" and sourcetype[COMBATLOG_FILTER_HOSTILE_PLAYERS] and (not gsadb.sonlyTF or sourceuid.target or sourceuid.focus) and not gsadb.castSuccess) then
 		if self:Throttle(tostring(spellID).."default", 0.05) then return end
 		if gsadb.class and playerCurrentZone == "arena" then
-			if spellID == 42292 or spellID == 208683 or spellID == 195710 then
+			if spellID == 42292 or spellID == 208683 or spellID == 195710 or spellID == 42292 or spellID == 336126 then
 				local c = self:ArenaClass(sourceGUID) -- PvP Trinket Class Callout
 					if c then 
 					self:PlaySound(c);
