@@ -1,7 +1,10 @@
 - version 3.0.1 (9.0)
 
 General
-* Alerts are now disabled in Sanctuary zones.
+* Alerts are now disabled completely in Sanctuary zones. No more Soul Shape! Soul Shape! Soul Shape! Soul Shape!
+* Heirloom PvP trinkets should now function properly with the Class Alert feature in Arenas. Talk about an edge case.
+* Shadowlands Medallion trinkets should now function properly with the Class Alert feature for arenas.
+* Adaptation alerts have been fixed.
 
 ===========================================
 - version 3.0 (9.0)
